--- a/src/Manassa/Windows/Viewers/Clusters/ClusterControl.xaml
+++ b/src/Manassa/Windows/Viewers/Clusters/ClusterControl.xaml
@@ -6,11 +6,12 @@
              xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
              xmlns:pnnlCharts="clr-namespace:PNNLControls.Drawing.Charting;assembly=PNNLControls"
              xmlns:maCharts="clr-namespace:MultiAlignCustomControls.Charting;assembly=MultiAlignCustomControls"
-             xmlns:maWindows="clr-namespace:Manassa.Windows"
+             xmlns:maWindows="clr-namespace:Manassa.Windows"             
              xmlns:converters="clr-namespace:Manassa.Converters"
              mc:Ignorable="d"          
-             x:Name="myControl"
-             d:DesignHeight="382" d:DesignWidth="838">
+             x:Name="myControl" 
+             d:DesignWidth="800"
+             d:DesignHeight="600">
 
     <UserControl.Resources>
         <converters:BoolVisibilityConverter x:Key="UseDriftTimeConverter" FalseVisibility="Collapsed"></converters:BoolVisibilityConverter>
@@ -20,41 +21,31 @@
     <Grid 
         Margin="4">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="50*"/>
-            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-
         <Grid.RowDefinitions>
+            <RowDefinition Height="50*"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="50*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <!-- Abundances -->
-        <TabControl
-            Grid.Column="0"
-            Grid.Row="1"
-            Grid.ColumnSpan="2">
-            <TabItem 
-                
-                Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                Header="Tags and Clusters">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="{Binding Path=UsesDriftTime, Converter={StaticResource ResourceKey=UseDriftTimeWidthConverter}}"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>                            
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
+        <Grid
+            Grid.Row="0"
+            >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>                
+                <ColumnDefinition Width="{Binding Path=UsesDriftTime, Converter={StaticResource ResourceKey=UseDriftTimeWidthConverter}}"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-                    <WindowsFormsHost
+            <WindowsFormsHost
                         Margin="1,1,1,1"
                         Grid.Row="0"
-                        Grid.Column="2">
-                        <maCharts:SingleClusterChart
+                        Grid.Column="0">
+                <maCharts:SingleClusterChart
                                 x:Name="m_clusterChart"
                                 Title=""
                                 XAxisLabel="NET"
@@ -62,13 +53,21 @@
                                 YAxisShortHand="ppm"
                                 XAxisShortHand="NET"
                                 />
-                    </WindowsFormsHost>
-                    <WindowsFormsHost
+            </WindowsFormsHost>
+
+            <GridSplitter
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Width="3"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"
+                        Background="#FF00000A"/>
+            <WindowsFormsHost
                         Margin="1,1,1,1"
                         Visibility="{Binding Path=UsesDriftTime , Converter={StaticResource ResourceKey=UseDriftTimeConverter}}"
                         Grid.Row="0"                        
-                        Grid.Column="4">
-                        <maCharts:SingleClusterChart
+                        Grid.Column="2">
+                <maCharts:SingleClusterChart
                                 x:Name="m_driftChart"
                                 
                                 Title=""                                
@@ -78,43 +77,119 @@
                             XAxisShortHand="ms"
                                 LegendVisible="False"
                                 />
-                    </WindowsFormsHost>
-                    
-                    <TabControl
+            </WindowsFormsHost>
+        </Grid>
+        <GridSplitter
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="3"
+                        Height="3"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"
+                        Background="#FF00000A"/>
+        <TabControl
+            Grid.Column="0"
+            Grid.Row="2"
+            Grid.ColumnSpan="2">
+            <TabItem 
+                Style="{DynamicResource ResourceKey=SimpleTabItem}"
+                Header="Features">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="60*" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="40*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="50*"/>
+                    </Grid.RowDefinitions>
+
+                    <GridSplitter
                         Grid.Row="0"
-                        Grid.Column="0"   >
-                        <TabItem
+                        Grid.RowSpan="2"
+                        Grid.Column="1"                
+                        Width="3"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"                                
+                        />
+
+                    <GridSplitter
+                        Grid.Row="1"
+                        Grid.Column="2"                
+                        Height="3"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"                                
+                        />
+
+                    <!-- Features Grid -->
+                    <maWindows:FeatureGrid
+                        Grid.Column="0"
+                        Grid.RowSpan="3"
+                        x:Name="m_featureGrid"/>
+
+
+                    <WindowsFormsHost
+                        Grid.Column="2"
+                        Grid.Row="0"
+                        >
+                        <maCharts:SingleUMCChart
+                                x:Name="m_msFeaturePlot"
+                                Title=""
+                                LegendVisible="False"                
+                                />
+                    </WindowsFormsHost>
+
+                    <!-- Plots based on feature selection -->
+                    <WindowsFormsHost
+                        Grid.Column="2"
+                        Grid.Row="2"
+                        >
+                        <maCharts:SICChart
+                                x:Name="m_sicChart"
+                                Title=""
+                                TitleVisible="False"
+                                LegendVisible="False"                
+                                />
+                    </WindowsFormsHost>
+
+                </Grid>
+            </TabItem>
+            <TabItem
                 Style="{DynamicResource ResourceKey=SimpleTabItem}"
                             Header="Nearby Clusters"
                             Margin="1,1,1,1">
-                            <maWindows:ClusterGrid
+                <maWindows:ClusterGrid
                                 UsesDriftTime="{Binding Path=UsesDriftTime, NotifyOnSourceUpdated=True}"
                                 x:Name="m_clusterGrid" />
-                        </TabItem>
-                        <TabItem
+            </TabItem>            
+            <TabItem
                             
                 Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                            Header="Matching Mass Tags"
+                            Header="AMT Tags"
                             Margin="1,1,1,1">
-                            <maWindows:ClusterToMassTagGrid
-                                x:Name="m_masstagGrid" />
-                        </TabItem>
-                    </TabControl>
-                    
-                    <WrapPanel
-                        Grid.Row="1"
-                        Margin="3,3,3,3"
-                        Grid.ColumnSpan="3">
-                        <Button 
-                                Width="120"
-                                Style="{DynamicResource ResourceKey=SimpleButtonStyle}"
-                                Content="Save Feature Plots"
-                                x:Name="m_saveFeaturePlotButton" 
-                                Click="m_saveFeaturePlotButton_Click" />
-                    </WrapPanel>
+                <Grid>    
+                    <Grid.RowDefinitions>
+                        
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>                            
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <maWindows:ClusterToMassTagGrid
+                                    Grid.Column="0"
+                                    x:Name="m_masstagGrid" />
+
+                    <maWindows:MassTagControl
+                                Grid.Column="1"
+                                UsesDriftTime="{Binding Path=UsesDriftTime, 
+                                RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                                x:Name="m_massTagDisplay"
+                                MassTag="{Binding Mode=OneWay, ElementName=m_massTagGrid, Path=SelectedTag}"/>
                 </Grid>
             </TabItem>
-
             <TabItem
                 Style="{DynamicResource ResourceKey=SimpleTabItem}"
                 Header="Nearby Cluster Stats"
@@ -248,54 +323,7 @@
                     </TabControl>
                 </Grid>
             </TabItem>
-            <TabItem 
-                Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                Header="Features">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="60*" />
-                        <ColumnDefinition Width="40*" />
-                    </Grid.ColumnDefinitions>
-
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="50*"/>
-                        <RowDefinition Height="50*"/>
-                    </Grid.RowDefinitions>
-                    
-                    <!-- Features Grid -->
-                    <maWindows:FeatureGrid
-                        Grid.Column="0"
-                        Grid.RowSpan="2"
-                        x:Name="m_featureGrid"
-                        />
-                    <!--SelectedFeature="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorLevel=1, AncestorType={x:Type maWindows:ClusterControl}}, Path=UMCFeature}"-->
-
-                    <!-- Plots based on feature selection -->                    
-                    <WindowsFormsHost
-                        Grid.Column="1"
-                        Grid.Row="1"
-                        >
-                        <maCharts:SICChart
-                                x:Name="m_sicChart"
-                                Title=""
-                                TitleVisible="False"
-                                LegendVisible="False"                
-                                />
-                    </WindowsFormsHost>
-
-                    <WindowsFormsHost
-                        Grid.Column="1"
-                        Grid.Row="0"
-                        >
-                        <maCharts:SingleUMCChart
-                                x:Name="m_msFeaturePlot"
-                                Title=""
-                                LegendVisible="False"                
-                                />
-                    </WindowsFormsHost>
-                </Grid>
-            </TabItem>
-            <TabItem 
+            <!--<TabItem 
                 Style="{DynamicResource ResourceKey=SimpleTabItem}"
                 Header="Abundance Profile"
                 >
@@ -306,8 +334,7 @@
                                         LegendVisible="False"                
                                         />
                 </WindowsFormsHost>
-            </TabItem>
-
+            </TabItem>-->
             <TabItem 
                 Style="{DynamicResource ResourceKey=SimpleTabItem}"
                 Header="MS/MS">
@@ -315,6 +342,22 @@
                     x:Name="m_msmsGrid"/>
             </TabItem>
         </TabControl>
+        <WrapPanel
+                        Grid.Row="3"
+                        Margin="3,3,3,3"
+                        Grid.ColumnSpan="3">
+            <Button                                 
+                                Width="120"
+                                Style="{DynamicResource ResourceKey=SimpleButtonStyle}"
+                                Content="Save Feature Plots"
+                                x:Name="m_saveFeaturePlotButton" 
+                                Click="m_saveFeaturePlotButton_Click" />
+            <Button                                 
+                                Width="120"
+                                Style="{DynamicResource ResourceKey=SimpleButtonStyle}"
+                                Content="Export MS/MS"
+                                x:Name="exportMsMsButton" Click="exportMsMsButton_Click" />
+        </WrapPanel>
     </Grid>
     
 </UserControl>
