--- a/src/Manassa/Windows/Viewers/AnalysisView.xaml
+++ b/src/Manassa/Windows/Viewers/AnalysisView.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"              
-             xmlns:windows="clr-namespace:Manassa.Windows"
+             xmlns:windows="clr-namespace:Manassa.Windows"   
+             xmlns:clusterViews="clr-namespace:Manassa.Windows.Viewers.Clusters"
              xmlns:converters="clr-namespace:Manassa.Converters"
              xmlns:maCharts="clr-namespace:MultiAlignCustomControls.Charting;assembly=MultiAlignCustomControls"
              mc:Ignorable="d" 
@@ -28,9 +29,9 @@
                 Header="Clusters">
                 <Grid>        
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="20*"/>
+                        <ColumnDefinition Width="30*"/>
                         <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="80*"/>
+                        <ColumnDefinition Width="70*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="75*"/>
@@ -58,10 +59,12 @@
                             LegendVisible="false"
                             YAxisShortHand="ppm"
                             XAxisShortHand="NET"
+                            
                             x:Name="m_clusterPlot"
                             />
                     </WindowsFormsHost> 
                     
+                        
                     <!-- Cluster Grid Data -->
                     <windows:ClusterGrid
                         Margin="5,5,5,5"
@@ -70,7 +73,8 @@
                         x:Name="m_clusterGrid"                
                         />
 
-                    <!-- Single cluster Control-->
+
+                        <!-- Single cluster Control-->
                     <windows:ClusterControl
                         Margin="5,5,5,5"
                         x:Name="m_clusterControl"
